# substrate-solochain-frontier-template

./: .gitignore  Cargo.toml  README.md  types.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/substrate-validator-set/: Cargo.toml
pallets/substrate-validator-set/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
